force-app/main/default/objects/ClientDocument__c/ClientDocument__c.object-meta.xml
<CustomObject>
    <description>Stores basic information about a document belonging to a client Account (e.g. ID card, passport, contract) so users can see at a glance which documents a client has on file and whether they are still valid.</description>
    <label>Client Document</label>
    <nameField>
        <displayFormat>DOC-{0000}</displayFormat>
        <label>Client Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>