force-app/main/default/objects/ClientDocument__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The client Account this document belongs to. Master-Detail so that Client Documents are deleted when the Account is deleted and sharing follows the parent Account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Documents</relationshipLabel>
    <relationshipName>ClientDocuments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>