force-app/main/default/objects/ClientDocument__c/fields/DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumber__c</fullName>
    <description>The number printed on the physical or issued document, used to identify it outside of Salesforce.</description>
    <inlineHelpText>Enter the number exactly as printed on the physical or issued document.</inlineHelpText>
    <label>Document Number</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>