force-app/main/default/objects/ClientDocument__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <description>The kind of document on file, e.g. identity card, passport, or contract.</description>
    <inlineHelpText>Select the type of document that was uploaded or issued.</inlineHelpText>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identity Card</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Driving Licence</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>