force-app/main/default/objects/ClientDocument__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <description>The date the document expires. Optional, since not every document type has an expiration date.</description>
    <inlineHelpText>Enter the expiration date, if applicable. Leave blank for documents that do not expire.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>