force-app/main/default/objects/ClientDocument__c/fields/IssueDate__c.field-meta.xml
<CustomField>
    <fullName>IssueDate__c</fullName>
    <description>The date the document was issued to the client.</description>
    <inlineHelpText>Enter the date the document was issued.</inlineHelpText>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>