force-app/main/default/objects/ClientDocument__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The current status of the document, set manually by users for v1 (no automatic transition on expiration).</description>
    <inlineHelpText>Set the current status of this document. Status is updated manually and does not change automatically on expiration.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
            <value>
                <fullName>Pending Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>