force-app/main/default/objects/ClientDocument__c/validationRules/ExpirationNotBeforeIssue.validationRule-meta.xml
<ValidationRule>
    <fullName>ExpirationNotBeforeIssue</fullName>
    <active>true</active>
    <description>Ensures the expiration date is not earlier than the issue date when both dates are populated.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(ExpirationDate__c)),
NOT(ISBLANK(IssueDate__c)),
ExpirationDate__c &lt; IssueDate__c
)</errorConditionFormula>
    <errorMessage>Expiration date cannot be before the issue date.</errorMessage>
</ValidationRule>